2004-12-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the job group.
	(shimbun-asahi-get-headers): Replace `.' with `/' in group names;
	remove a special treatment for the international group; don't add
	extra keywords in Message-IDs for the job.special group.

2004-12-23  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add edu, edu.it,
	edu.nyushi, job.special and international.jinmin groups; fix url
	for the english group; exclude Jinmin-Nippou from the international
	group.

2004-12-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Revert.

2004-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Bind undo-outer-limit.

2004-12-19  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-the-register.el: New file.

2004-12-18  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-x51.el (shimbun-x51-group-alist): Append "news" and
	"story" entries; sort entires in alphabetical order.

2004-12-17  Tetsurou Okazaki  <okazaki@be.to>

	* shimbun/sb-sourceforge-jp.el (shimbun-sourceforge-jp): Inherit
	`shimbun-mailman-ja' instead of `shimbun-mailman'.

2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/nnshimbun.el (nnshimbun-request-delete-group): New function.

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Improve regexp.

2004-12-17  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-fontify-anchors): Local file is given special
	treatment for `href'. Fix match data of `href'.
	(w3m-view-this-url-1): If the points of window was treated in
	w3m-goto-url(), now reconstruct window configuration.

2004-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-update-tab-line): Wobble the window size instead
	of setting the cursor color.

2004-12-15  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m-namazu.el (w3m-namazu): Added optional argument `reload'.
